# soltap-card

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml  package.json  pnpm-lock.yaml
apps/indexer/: Cargo.toml
apps/indexer/migrations/: 0001_handshakes.sql
apps/indexer/src/: config.rs  decoder.rs  events.rs  http.rs  lib.rs  main.rs  store.rs  subscriber.rs
apps/indexer/tests/: decoder_test.rs  http_test.rs  store_test.rs
apps/indexer/tests/fixtures/: createv2_4srsGtKB.json
apps/web/: app.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/: entry-client.tsx  entry-server.tsx
apps/web/src/components/: HandshakeCounter.tsx  HandshakeFeed.tsx
apps/web/src/lib/: config.ts  counter.ts  icon.ts  indexer.ts  mint.ts  rateLimit.ts  solana.ts
apps/web/src/routes/: [owner].tsx  index.tsx
apps/web/src/routes/m/: [edition].ts
apps/web/src/routes/tap/: [owner].ts
apps/web/tests/: config.test.ts  mint.test.ts  setup.ts  tap.get.test.ts  tap.post.test.ts
docs/: deploy.md
docs/superpowers/plans/: 2026-05-21-soltap.md
docs/superpowers/specs/: 2026-05-21-soltap-design.md
patches/: @noble__hashes@2.2.0.patch
scripts/: check-config.ts  init-collection.ts  mint-handshake.ts
