[package]
name = "soltap-indexer"
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
toml = "0.8"
dotenvy = "0.15"
